--- a/journal/202101.md
+++ b/journal/202101.md
@@ -8,20 +8,22 @@ _الصورة: تبديد الفائض بواسطة saender@_
 
 عيد ميلاد سعيد، ديكريد!
 
-- تم إصدار النسخة 1.6، راجع قسم برنامج التنين المخفي ذو الرؤوس المتعددة أدناه للحصول على تفاصيل الإصدار.
+خلفنا خمس سنوات من التطوير المستمر والتسليم بوعد اللامركزية ، خطوة واقعية واحدة في كل مرة. يناير لم يكن مختلفا: 
+
+- تم إصدار النسخة 1.6، راجع أدناه قسم إصدار التنين المخفي ذو الرؤوس المتعددة للحصول على التفاصيل .
 - استمر سعر التذكرة ونسبة المشاركة في إثبات الحصة في الارتفاع ليبلغا مستويات قياسية جديدة.
 - تم كسر سجل الإقبال على منصة بوليتيا للمقترحات في يناير، ومرة أخرى في فبراير، حتى بلغ 70% من المشاركة!
 - تمت الموافقة بالإجماع على التمويل المستمر لمنصة المُبادلات اللامركزية لديكريد DCRDEX، كما تمت الموافقة على مقترحات ديكريد في العمق و فريق ديكريد عربية.
 - وأخيرًا، أصبح لدى المجلة مقترح بوليتيا خاص بها (بشراكة مع الشريك الأصغر موجز بوليتيا) والذي سيضمن الحصول على تمويل لعام 2021، وقد بدأ التصويت عليه بالفعل.
 
-## برنامج التنين المخفي ذو الرؤوس المتعددة هنا!
+## إصدار التنين المخفي ذو الرؤوس المتعددة هنا!
 
 النسخة التي طال انتظارها 1.6 و المعروفة أيضًا بإسم التنين المخفي ذو الرؤوس المتعددة هنا أخيرا! وربما كان هذا أكبر تحديث في تاريخ ديكريد مع العديد من التحسينات الرئيسية والصغيرة في جميع مشاريع البرمجيات. تم سرد جميع التغييرات في ملاحظات الإصدار التفصيلية، لذا سنقوم هنا فقط بتسليط الضوء على التغييرات الكبيرة:
 
-- أصبح بالإمكان الآن الولوج إلى **المعاملات الخاصة** من خلال واجهة المستخدم الرسومية لديكريديتون. وهي تعمل عن طريق خلط العملات و جعل من الصعب للغاية تتبعها والتجسس على رصيدك أو نشاطك. هذه الميزة ضرورية لحماية خصوصية المستخدمين العاديين وخاصة الناخبين، الذين تعمل خصوصيتهم على تحسين أمن الشبكة بالكامل. كما أنه يحمي مبدأ الاستبدال في [دستور](https://docs.decred.org/governance/decred-constitution/) ديكريد. ويتميز التطبيق المختار (StakeShuffle) بالخصائص الجميلة المتمثلة في إبقاء إمدادات العملة قابلة للتدقيق في جميع الأوقات، والاعتماد على التشفير البسيط وتحقيق الخصوصية العالية بفضل الإدماج الذكي مع نظام التحصيص وحجم الخلط الكبير.
+- أصبح بالإمكان الآن الوصول إلى **المعاملات الخاصة** من خلال واجهة المستخدم الرسومية لديكريديتون. وهي تعمل عن طريق خلط العملات و جعل تتبعها والتجسس على رصيدك أو نشاطك صعب للغاية. هذه الميزة ضرورية لحماية خصوصية المستخدمين العاديين وخاصة الناخبين، الذين تعمل خصوصيتهم على تحسين أمن الشبكة بالكامل. كما أنه يحمي مبدأ الاستبدال في [دستور](https://docs.decred.org/governance/decred-constitution/) ديكريد. ويتميز التطبيق المختار (StakeShuffle) بالخصائص الجميلة المتمثلة في إبقاء مَخزُون العملة قابل للتدقيق في جميع الأوقات، والاعتماد على التشفير البسيط وتحقيق الخصوصية العالية بفضل الإدماج الذكي مع نظام التحصيص وحجم الخلط الكبير.
 - تُحَسِّن **البنية الجديدة لموفر خدمة التصويت** تجربة استخدام موفري خدمة التصويت بشكل كبير، والتي يستخدمها ما يقرب من نصف جميع الناخبين الذين لا يديرون محافظ التصويت 24/7. لا توجد حسابات لإنشاءها وتذكرها، لا حاجة للقيام بنسخ إحتياطي للبرنامج النصي للإسترداد أو مشاركة البريد الإلكتروني، و لا عناوين معاد إستخدامها، و الدعم الإختياري للخلط - كل ذلك يجعل عملية التحصيص أسهل وأكثر خصوصية.
 - ستنقل **الرقابة اللامركزية للخزينة** سلطة الموافقة على الإنفاق أو رفضه من الخزينة إلى أيدي أصحاب الحصص في ديكريد. وسيتم التصويت على التغييرات المطلوبة بالإجماع في الأشهر المقبلة وتفعيلها إذا تمت الموافقة عليها.
-- توفر منصة المُبادلات اللامركزية لديكريد **DCRDEX** تبادلًا آمنًا، خاصًّا وعادلًا، حيث يمكنك التحكم في المفاتيح في جميع الأوقات ولا تقوم منصة المُبادلات بتخزين أي عملات أبدًا. المعلومات الخاصة محمية بأفضل طريقة ممكنة - من خلال عدم جمعها. إن الجمع بين مطابقة الطلبات العشوائية الزائفة في فترات زمنية، والتي تتطلب أموالًا على السلسلة وحدود سعرية تمنع السلوك السيئ مثل التداول عالي التردد، وإدارة الواجهة، وتزييف الطلبات وتزوير حجم التداول. كما أن منصة المُبادلات لا تأخذ أي رسوم تداول.
+- توفر منصة المُبادلات اللامركزية لديكريد **DCRDEX** تبادلًا آمنًا، خاصًّا وعادلًا، حيث يمكنك التحكم في المفاتيح في جميع الأوقات ولا تقوم منصة المُبادلات بتخزين أي عملات أبدًا. المعلومات الخاصة محمية بأفضل طريقة ممكنة - من خلال عدم جمعها. إن الجمع بين مطابقة الطلبات الشبه عشوائية ضمن فترات زمنية والتي تتطلب أموالًا على السلسلة وحدود سعرية، تمنع السلوك السيئ مثل التداول عالي التردد، والتّتَبّع بدنوّ خطر ، وتزييف الطلبات وتزوير حجم التداول. كما أن منصة المُبادلات لا تأخذ أي رسوم تداول.
 
 وهذه هي الخطوات عالية المستوى للتحديث:
 
@@ -33,7 +35,7 @@ _الصورة: تبديد الفائض بواسطة saender@_
 * حدد [خيار التصويت الخاص بك](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) للتصويت القادم لتغيير قاعدة الإجماع لتفعيل الخزينة اللامركزية. لمعرفة كيفية عمله اقرأ [المقترح](https://proposals.decred.org/proposals/c96290a) من أجل أخذ فكرة عامة و[مقترح التغيير لديكريد](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki)  لأحدث التفاصيل التقنية. إذا كانت حوكمة ديكريد جديدة بالنسبة إليك فيمكنك مشاهدة مقطع الفيديو [التفصيلي السريع](https://www.youtube.com/watch?v=1QiC0btcf7E) حول الحوكمة المقدم بواسطة Checkmate@.
 * يمكنك مشاهدة تحديث الشبكة وتقدم التصويت بالإجماع [هنا](https://voting.decred.org/) أو [هنا](https://explorer.dcrdata.org/agenda/treasury)؛
 * يتطلب استخدام منصة المُبادلات اللامركزية لديكريد DCRDEX حاليًا بعض المهارات التقنية ولكن سيتم تبسيط ذلك في الإصدارات التالية. في هذه الأثناء، يمكنك اتباع هذا [الدليل](https://medium.com/decred/how-to-get-on-dcrdex-mvp-816d713ec5c0) بقلم richardred@
-
+_
 هناك بعض [المشكلات المعروفة](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/) المتعلقة بشراء التذاكر في الإصدار 1.6.0 من Decrediton والتي سيتم إصلاحها في إصدار التصحيح القادم.
 
 ## التطوير
@@ -142,9 +144,9 @@ CMS:
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-* دعم [StakeShuffle](https://github.com/planetdecred/dcrandroid/pull/520) الأولي: عند تفعيله، يتم تعطيل إنشاء عناوين استقبال للحساب المختلط وإرسال الأموال من حساب التغيير
-* [صفحات واجهة مستخدم](https://github.com/planetdecred/dcrandroid/pull/529) الخصوصية: مقدمة، نافذة مساعدة منبثقة، عرض الرصيد غير المختلط، تفاصيل خادم CSPP، تقدم الخلط، و غيرها
-* دعم [مقترحات](https://github.com/planetdecred/dcrandroid/pull/503) بوليتيا: مراجعة قائمة المقترحات وحالة التصويت الخاصة بها، وفتح اقتراحٍ محدد وتلقي إشعارات بشأن المقترحات الجديدة، وبدء التصويت وانتهائه
+* دعم [StakeShuffle](https://github.com/planetdecred/dcrandroid/pull/520) الأولي: عند تفعيله، يتم تعطيل إنشاء عناوين استقبال للحساب المخلوط وإرسال الأموال من حساب التغيير
+* [صفحات واجهة مستخدم](https://github.com/planetdecred/dcrandroid/pull/529) الخصوصية: مقدمة، نافذة مساعدة منبثقة، عرض الرصيد غير المخلوط، تفاصيل خادم CSPP، تقدم الخلط، و غيرها
+* دعم [مقترحات](https://github.com/planetdecred/dcrandroid/pull/503) بوليتيا: مراجعة قائمة المقترحات وحالة التصويت الخاصة بها، وفتح اقتراح محدد وتلقي إشعارات بشأن المقترحات الجديدة، وبدء التصويت وانتهائه
 * صفحة التصحيح لعرض تفاصيل حول [الأقران](https://github.com/planetdecred/dcrandroid/pull/501) المتصلين
 * خيار إنشاء محفظة [مراقبة فقط](https://github.com/planetdecred/dcrandroid/pull/530) من شاشة البداية
 * إشعارات أكثر تحديدا لتصويت [التذاكر](https://github.com/planetdecred/dcrandroid/pull/531) وإلغاء المعاملات
@@ -269,7 +271,7 @@ Coinmine بنسبة 0.04%
 
 اعتبارا من فبراير 10، تم تلبية [عتبة تحديث](https://voting.decred.org/)  إثبات الحصة بعد [تغيير](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) إجماع الخزينة اللامركزية في حين في الوقت الذي يلحق فيه إثبات العمل عند 50%.
 
-توفرت الشبكة البرقية لديكريد على 28 عقدة (بزيادة 4 عقد) و 47 قناة (5+) بسعة إجمالية تبلغ 8.3 DCR (0.4-)، اعتبارًا من 1 فبراير. كما تم نقل خريطة شبكة jholdstock@ إلى [نطاق جديد](https://ln-map.jholdstock.uk/). أصبحت سعة  الشبكة البرقية أكثر أهمية حيث يتم عرض المزيد من ميزات  الشبكة البرقية للمستخدمين النهائيين عبر  واجهة المستخدم الرسومية لديكريديتون. شكرا لجميع مشغلي الشبكة البرقية [لتشغيل العقد](https://docs.decred.org/lightning-network/overview/)!
+ الشبكة البرقية لديكريد لديها 28 عقدة (بزيادة 4 عقد) و 47 قناة (5+) بسعة إجمالية تبلغ 8.3 DCR (0.4-)، اعتبارًا من 1 فبراير. كما تم نقل خريطة شبكة jholdstock@ إلى [نطاق جديد](https://ln-map.jholdstock.uk/). أصبحت سعة  الشبكة البرقية أكثر أهمية حيث يتم عرض المزيد من ميزات  الشبكة البرقية للمستخدمين النهائيين عبر  واجهة المستخدم الرسومية لديكريديتون. شكرا لجميع مشغلي الشبكة البرقية [لتشغيل العقد](https://docs.decred.org/lightning-network/overview/)!
 
 تابع richardred@ في [تقريره](https://blockcommons.red/post/dcr-on-chain-2/) الثاني لتحليل سلسلة الكتل عن كيفية تدفق العملات المعدنة حديثًا من مجمعات التعدين، وعن معدينها، وكيف تصل في نهاية المطاف إلى عناوين منصات التبادل. ويستكمل التقرير التقدم المحرز في تطوير الأدوات، ويشارك تصورات مجموعات العناوين/المعاملات وتدفق الأموال. وينصب التركيز الرئيسي للتقرير على المجموعات الخمس التي تلقت أكبر قدر من DCR في [Coinbase](https://docs.decred.org/glossary/#coinbase-transaction) عام 2019-2020، و المجموعات الخمس التي تلقت أكبر قدر من DCR من هذه المعاملات. وكان يُعتقد أن هذه المجموعات تمثل مجمعات التعدين ومستخدميها، ولكن دراسة كيفية تنظيمها تشير إلى وجود تباين في وظيفتها، ويبدو أن بعضها يعود إلى أفراد. ويمكن اعتبار ما مجموعه 4,852 مجموعة متميزة (مع أكثر من عنوان واحد لكل منها) بمثابة تخمين تقريبي لعدد الأفراد/المحافظ المختلفة الذين قاموا بتعدين DCR في هذه الفترة.
 
@@ -381,7 +383,7 @@ Coinmine بنسبة 0.04%
 
 أظهر [الرسم البياني](https://twitter.com/_Checkmatey_/status/1347662655830441984) الملون بواسطة Checkmate كيف لم يتبع تتبع الديكريد الخمس أكبر عملات في انخفاضها مقابل BTC بل وحققت بعض المكاسب.
 
-[يسلط](https://twitter.com/_Checkmatey_/status/1355296688026447873) [العدد 56](https://ournetwork.substack.com/p/our-network-issue-56) من النشرة الإخبارية Our Network لتحديث الديكريد بقلم Checkmate@ و PermabullNino@ الضوء على أعلى تدفق على الإطلاق لـ DCR إلى التذاكر مما دعم مضاعفة سعر DCR/BTC. ويوضح مؤشر السعر الذي تم فيه تحصيص DCR أن 17٪ فقط من إجمالي التحصيص حدث فوق 40 دولارًا، مما يشير إلى أن أصحاب الحصص يحققون ربحًا معقولًا بالدولار الأمريكي. ويقدر مستوى عتبة الربح لأصحاب الحصص بزوج DCR/BTC بحوالي 0.004 BTC، ما يعني أن أزيد من 60 % من أصحاب الحصص سيحققون أرباحًا.
+[يسلط](https://twitter.com/_Checkmatey_/status/1355296688026447873) [العدد 56](https://ournetwork.substack.com/p/our-network-issue-56) من النشرة الإخبارية Our Network لتحديث الديكريد بقلم Checkmate@ و PermabullNino@ الضوء على أعلى تدفق على الإطلاق لـ DCR إلى التذاكر مما دعم مضاعفة سعر DCR/BTC. ويوضح مؤشر السعر الذي تم فيه تحصيص DCR أن 17٪ فقط من إجمالي التحصيص حدث فوق 40 دولارًا، مما يشير إلى أن أصحاب الحصص يحققون ربحًا معقولًا بالدولار الأمريكي. ويقدر مستوى عتبة الربح لأصحاب الحصص بزوج DCR/BTC بحوالي 0.004 BTC، ما يعني أن أكثر من 60 % من أصحاب الحصص سيحققون أرباحًا.
 
 [أضاف](https://twitter.com/_Checkmatey_/status/1347035560687202307) موقع [checkonchain.com](https://checkonchain.com/dcronchain/unrealisedpnl_oscillator_usd/unrealisedpnl_oscillator_usd_light.html) مولد ترددات الربح والخسارة غير المحقق الذي يقيس الفرق بين السعر الفوري والسعر المحقق كمقياس "للمشاعر" حول مقدار الربح في النظام. انضم PermabullNino@ لتحسين الموقع ونشر [عرضا تفصيليا](https://twitter.com/PermabullNino/status/1351571649548599297) لبعض الرسوم البيانية المثيرة للاهتمام. على سبيل المثال، كان سعر التذكرة مدى الحياة للدولار الأمريكي في الماضي بمثابة خط سوق التصاعدي/الهابط و الذي تم التخلص منه في يناير.
 
