--- a/journal/202102.md
+++ b/journal/202102.md
@@ -36,9 +36,9 @@ _الصورة: L2 بواسطة saender@_
 
 احصل على ملاحظات الإصدار الكاملة والتنزيلات [هنا](https://github.com/decred/decred-binaries/releases/tag/v1.6.1)، أو اقرأ ملخص التغييرات في الأقسام أدناه. وكما هو الحال دائما، احترم طقوس [التحقق](https://docs.decred.org/advanced/verifying-binaries/) من التوقيع لضمان تشغيل البرامج الجاهزة التي وضعها المطورون.
 
-لا تزال هناك بعض الجوانب التقريبية في مجموعة الخلط + مزوِّد خدمة التصويت الجديد، تحقق من هذا [المنشور](https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/) بواسطة u/mowmowbeans للتعرف على الحلول البديلة.
+لا تزال هناك بعض الصعوبات في مجموعة الخلط وفي مزوِّد خدمة التصويت الجديد، اطلع على هذا [المنشور](https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/) بواسطة u/mowmowbeans للتعرف على الحلول البديلة.
 
-للحصول على آخر مستجدات تحديث ديكريديتون، تحقق من برامج الفيديو التعليمية ل Exitus@ عن [الخلط](https://www.youtube.com/watch?v=QC65PBNwAK4) السريع و [التحصيص](https://www.youtube.com/watch?v=olWfTqw16OQ).
+للحصول على آخر مستجدات تحديث ديكريديتون، راجع الفيديوهات التعليمية ل Exitus@ عن [الخلط](https://www.youtube.com/watch?v=QC65PBNwAK4) السريع و [التحصيص](https://www.youtube.com/watch?v=olWfTqw16OQ).
 
 ## التصويت على الإجماع الجديد!
 
@@ -61,7 +61,7 @@ _الصورة: L2 بواسطة saender@_
 * تم [تعديل](https://github.com/decred/dcrd/pull/2597) منطق الإخطار لإجبار معدني إثبات العمل على التحديث حتى يمكن بدء التصويت على تغييرات الإجماع الجديدة
 * تم إصلاح [مشكلة](https://github.com/decred/dcrd/pull/2582) نادرة حيث قد لا يتم إعادة إنشاء الاتصالات بعد انقطاع الشبكة
 
-في إطار التطوير نحو [الإصدار التالي](https://github.com/decred/dcrd/milestone/26)، كان أبرز ما حدث هذا الشهر هو إضافة [ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2591) والتي تقلل الوقت الأولي لمزامنة سلسلة الكتل بنسبة 33٪ تقريبًا على حساب بعض الذاكرة الإضافية. كما أنها تسرع بشكل كبير معالجة الكتل أثناء التشغيل العادي وتقلل من التدمير والتلف على وسيط التخزين عن طريق السماح بالمدخلات التي يتم إنشاؤها وإنفاقها بين فترات التنظيف لتجنب كتابتها على الإطلاق. وتعد ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة خطوة مطلوبة نحو تنزيل الكتلة المتوازية [متعددة الأقران](https://github.com/decred/dcrd/issues/1145). ميزة أخرى هي [تقديم](https://github.com/decred/dcrd/pull/2579) مرشحات Age-Partitioned Bloom. مرشح APBF هو جهاز بحث يمكنه معرفة ما إذا كان يحتوي على عنصر بسرعة. يمكنه تتبع الكثير من البيانات أثناء استخدام ذاكرة صغيرة، على حساب معدل مضبوط من الايجابيات الكاذبة. وبخلاف مرشحات Bloom الكلاسيكية، يمكنه التعامل مع كمية غير محدودة من البيانات عن طريق التقادم والتخلص من العناصر القديمة. والدافع لإضافة APBF إلى الديكريد هو استبدال ذاكرة التخزين المؤقت LRU (الأقل استخداما مؤخرا) المستخدمة لتتبع البيانات التي يعرف أن الأقران الآخرين يستعملونها. للحصول على مثال ملموس ، يتم تقليل الذاكرة لتتبع العناوين المعروفة من قبل 125 من أقرانهم من ~200 إلى ~5 ميغا بايت عند استخدام APBFs. كما أن الحزمة [مفيدة](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg) لمشاريع أخرى مثل المحفظة، ومنصة المُبادلات اللامركزية، والمحافظ المحمولة، وما إلى ذلك. اقرأ التفاصيل كاملة في [طلب السحب](https://github.com/decred/dcrd/pull/2579) و [الملف التمهيدي](https://github.com/decred/dcrd/tree/master/container/apbf).
+في إطار التطوير نحو [الإصدار التالي](https://github.com/decred/dcrd/milestone/26)، كان أبرز ما حدث هذا الشهر هو إضافة [ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2591) والتي تقلل الوقت الأولي لمزامنة سلسلة الكتل بنسبة 33٪ تقريبًا على حساب بعض الذاكرة الإضافية. كما أنها تسرع بشكل كبير معالجة الكتل أثناء التشغيل العادي وتقلل من التدمير والتلف على وسيط التخزين عن طريق السماح بالمدخلات التي يتم إنشاؤها وإنفاقها بين فترات التنظيف لتجنب كتابتها على الإطلاق. وتعد ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة خطوة مطلوبة نحو تنزيل الكتلة المتوازية [متعددة الأقران](https://github.com/decred/dcrd/issues/1145). ميزة أخرى هي [اِستِحداث](https://github.com/decred/dcrd/pull/2579) مرشحات Age-Partitioned Bloom. مرشح APBF هو جهاز بحث يمكنه معرفة ما إذا كان يحتوي على عنصر بسرعة. يمكنه تتبع الكثير من البيانات باستخدام ذاكرة صغيرة، على حساب معدل مضبوط من الايجابيات الكاذبة. وبخلاف مرشحات Bloom الكلاسيكية، يمكنه التعامل مع كمية غير محدودة من البيانات عن طريق التقادم والتخلص من العناصر القديمة. والدافع لإضافة APBF إلى الديكريد هو استبدال ذاكرة التخزين المؤقت LRU (الأقل استخداما مؤخرا) المستخدمة لتتبع البيانات التي يعرف أن الأقران الآخرين يستعملونها. للحصول على مثال ملموس ، يتم تقليل الذاكرة لتتبع العناوين المعروفة من قبل 125 من أقرانهم من ~200 إلى ~5 ميغا بايت عند استخدام APBFs. كما أن الحزمة [مفيدة](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg) لمشاريع أخرى مثل المحفظة، ومنصة المُبادلات اللامركزية، والمحافظ المحمولة، وما إلى ذلك. اقرأ التفاصيل كاملة في [طلب السحب](https://github.com/decred/dcrd/pull/2579) و [الملف التمهيدي](https://github.com/decred/dcrd/tree/master/container/apbf).
 
 الأعمال المدمجة الأخرى:
 
@@ -147,7 +147,7 @@ _الصورة: L2 بواسطة saender@_
 
 إصدار نسخة التصحيح 0.1.5 لإصلاح بعض الميزات الخام:
 
-* التعامل مع الطلبات التي [فقدت](https://github.com/decred/dcrdex/pull/967) بطريقة ما عملاتها التمويلية
+* التعامل مع الطلبات التي [فقدت](https://github.com/decred/dcrdex/pull/967) عملاتها التمويلية بطريقة ما 
 * جعل طلبات العميل الأولية واسترداد القيمة [غير متزامنة](https://github.com/decred/dcrdex/pull/911) لعدم حظر الإجراءات التي يمكن أن تحدث بالتوازي
 * إعادة النظر في عمليات مراجعة العقود عند [استئناف](https://github.com/decred/dcrdex/pull/965) التداولات عند بدء التشغيل وتسجيل الدخول، للحيلولة دون إلغاء المطابقات بشكل غير صحيح
 * [تحديث](https://github.com/decred/dcrdex/pull/982) تبعية blake2 لمنع تلف الذاكرة الصامت
@@ -233,8 +233,8 @@ _الصورة: L2 بواسطة saender@_
 * حصلت صفحة [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) على أكثر من 3 آلاف متابع ليبلغ العدد الإجمالي 29 ألفًا
 * ظهرت حسابات [DecredKorea](https://twitter.com/DecredKorea) و [DecredNederland](https://twitter.com/DecredNederland)  على التويتر في يناير وبدأت في التغريد باللغتين الكورية والهولندية
 * انضم [DecredDEX](https://twitter.com/DecredDEX) إلى [decredexplorer](https://twitter.com/decredexplorer) والآن لدينا حسابان على التويتر يركزان على المنتج
-* اكتسب [Checkmate@](https://twitter.com/_Checkmatey_) أزيد من 30% من المتابعين (ليصل إلى 5 آلاف) ونشر ألف و مائتين تغريدة بمعدل مجنون يصل إلى 41 تغريدة في يوم
-* اكتسب [ConsensusRough](https://twitter.com/ConsensusRough) على أزيد من 18% متابع، ليبلغ 438 متابعا
+* اكتسب [Checkmate@](https://twitter.com/_Checkmatey_) أكثر من 30% من المتابعين (ليصل إلى 5 آلاف) ونشر ألف و مائتين تغريدة بمعدل مجنون يصل إلى 41 تغريدة في يوم
+* اكتسب [ConsensusRough](https://twitter.com/ConsensusRough) على أكثر من 18% متابع، ليبلغ 438 متابعا
 
 ## الإدارة و الحوكمة
 
@@ -326,7 +326,7 @@ _الصورة: L2 بواسطة saender@_
 
 مقالات مختارة:
 
-* الإصدار 1.6 لديكريد مع الشريك المؤسس ورئيس المشروع، جيك يوكوم بيات على  ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)). شريط فيديو من يناير أعيدت صياغته إلى مقال، يقارن كود الخزينة الجديد بـ "الحد الأدنى للتعقيد للاتصال الذكي المرتبط" ويشرح الميزات الرئيسية للإصدار 1.6 بعبارات بسيطة 
+* الإصدار 1.6 لديكريد مع الشريك المؤسس وقائد المشروع، جيك يوكوم بيات على  ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)). شريط فيديو من يناير أعيدت صياغته إلى مقال، يقارن كود الخزينة الجديد بـ "الحد الأدنى للتعقيد للاتصال الذكي المرتبط" ويشرح الميزات الرئيسية للإصدار 1.6 بعبارات بسيطة 
 * تم إدراج DCRDEX ضمن أفضل منصات المُبادلات اللامركزية التي يجب مشاهدتها في عام 2021 في [تقرير](https://xangle.io/research/600a3251b7cb8c849dfa26b9) بحثي لشهر يناير بواسطة Xangle
 
 أشرطة الفيديو:
@@ -378,7 +378,7 @@ _الصورة: L2 بواسطة saender@_
 
 نشر Checkmate@ موضوعا [ضخما](https://twitter.com/_Checkmatey_/status/1358968202898755584) على السلسلة مع العديد من (جميعها؟) المؤشرات تسير نحو أعلى مستوى لها على الإطلاق. تنبؤ 9 فبراير "سأشعر بالدهشة إذا تباطأ القطار من هنا، ليس في شخصيتها!" كان محقا.
 
-تم [ملاحظة](https://twitter.com/_Checkmatey_/status/1363709306885922826) مناقصات كبيرة على نحو غير عادي على منصة بينانس.
+تم [ملاحظة](https://twitter.com/_Checkmatey_/status/1363709306885922826) طلبات شراء كبيرة على نحو غير عادي على منصة بينانس.
 
 تم تداول 390 ألف DCR و ألف BTC خلال شهر فبراير على منصة المُبادلات اللامركزية لديكريد [DCRDEX](https://dex.decred.org/)، بمتوسط 14 ألف DCR و 36 BTC يوميا. وتراوح السعر بين 0.0019-0.0030 بمتوسط ​​0.0026.
 
@@ -390,7 +390,7 @@ _الصورة: L2 بواسطة saender@_
 
 مطوري البتكوين في [طور](https://twitter.com/AndreCronjeTech/status/1359934584612212738) البت في كيفية تفعيل تحديث [Taproot](https://bitcoinmagazine.com/technical/taproot-coming-what-it-and-how-it-will-benefit-bitcoin)، مع حول ما إذا كان يجب أن يتم شحن تحديث Bitcoin Core مع الإعداد الذي يتم تفعيله في نهاية فترة الإشارات بغض النظر عما إذا ما تم إستيفاء الحد الأقصى للأسبقية أم لا (مثل التفرع اللين المفعل بالمستخدم). أو اتباع نهج أكثر حذراً وتجنب إجبار القضية في البداية. أظهرت إشارات المعدنين للشهر المنتهي في 2 مارس دعمًا بنسبة 89٪ لـ Taproot من المجمعات وفقًا لمعدل التجزئة الخاص بهم. بالإضافة إلى ذلك، ساهم Poolin بجهد إجماعي في [تجميع](https://taprootactivation.com/) مشاعر المجمعات وطرق التفعيل المفضلة.
 
-توصل المدعي العام في نيويورك إلى [تسوية](https://www.reuters.com/article/new-york-ifinex-settlement/bitfinex-tether-owner-pays-18-5-mln-fine-to-settle-nyag-cryptocurrency-cover-up-charges-idUSL1N2KT16E) بتهم ضد Tether و Bitfinex والتي شهدت قيام الشركة بدفع غرامة قدرها 18.5 مليون دولار ولكن تجنب الاضطرار إلى الاعتراف بأي مخالفات.
+توصل المدعي العام في نيويورك إلى [تسوية](https://www.reuters.com/article/new-york-ifinex-settlement/bitfinex-tether-owner-pays-18-5-mln-fine-to-settle-nyag-cryptocurrency-cover-up-charges-idUSL1N2KT16E) بتهم ضد Tether و Bitfinex والتي شهدت قيام الشركة بدفع غرامة قدرها 18.5 مليون دولار ولكن تجنبت الاضطرار المترتبة بالأعتراف بأي مخالفات.
 
 تحرك البنك المركزي النيجيري لتذكير البنوك بأن "التعامل في العملات الرقمية أو تسهيل المدفوعات لمنصات العملات الرقمية محظور" و[أمرهم](https://www.coindesk.com/nigerias-central-bank-orders-banks-to-close-accounts-of-all-crypto-users) بإغلاق حسابات جميع الأشخاص والكيانات الذين يتاجرون في العملات الرقمية.
 
