--- a/journal/202103.md
+++ b/journal/202103.md
@@ -9,8 +9,8 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 أبرز أحداث شهر مارس:
 
 * تمت الموافقة على التصويت بالإجماع لتمكين نظام الخزينة الجديد، والذي من المفترض أن يتم تفعيله في حوالي 7 مايو، وحينها سيتم فصل العقد التي تشغل البرامج الأقدم من الإصدار 1.6 عن الشبكة.
-* تم إصدار النسخة 1.6.2 في أوائل أبريل، حيث تعمل على إصلاح عدد من المشاكل المتعلقة بالخلط وتذاكر موفر خدمة التصويت، بالإضافة إلى تحسين استقرار عُقَد التحقق من الدفع البسيط، من بين تحسينات أخرى.
-* اكتمل أخيرًا الترحيل الملحمي لـبوليتيا إلى واجهة تخزين خلفية جديدة أكثر مرونة وقابلية للتوسع، والتي كانت قيد التطوير لأكثر من عام!
+* تم إصدار النسخة 1.6.2 في أوائل أبريل، حيث تعمل على إصلاح عدد من المشاكل المتعلقة بالخلط وتذاكر موفر خدمة التصويت، بالإضافة إلى تحسين استقرار عُقَد التحقق البسيط من الدفع، من بين تحسينات أخرى.
+* اكتمل أخيرًا الترحيل الملحمي لـبوليتيا إلى واجهة تخزين خلفية جديدة أكثر مرونة وقابلة للتوسع، والتي كانت قيد التطوير لأكثر من عام!
 * استقر مجتمع ديكريد على حيوان روحي للمشروع، الثور الأمريكي المهيب!
 
 المحتويات:
@@ -33,7 +33,7 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 
 تم [تمرير](https://explorer.dcrdata.org/agenda/treasury) تصويت الإجماع لتمكين نظام الخزينة الجديد وسيتم تفعيل القواعد الجديدة في حوالي 7 مايو. ستتوقف العقد الأقدم من الإصدار 1.6 عن المزامنة، لذا يرجى التحديث للبقاء على الشبكة. يمكنك تتبع الأيام المتبقية [هنا](https://voting.decred.org/).
 
-يحتوي الإصدار الأخير من الإصدار 1.6.2 على إصلاحات للعديد من الأخطاء المتعلقة بالتحصيص بإستعمال موفري خدمة التصويت والخلط، بالإضافة إلى تحسين عملية التحقق من الدفع البسيط. راجع ملاحظات الإصدار الكامل والتنزيلات [هنا](https://github.com/decred/decred-binaries/releases/tag/v1.6.2)، ولا تنس [التحقق](https://docs.decred.org/advanced/verifying-binaries/) منها قبل التثبيت.
+يحتوي الإصدار الأخير من الإصدار 1.6.2 على إصلاحات للعديد من الأخطاء المتعلقة بالتحصيص بإستعمال موفري خدمة التصويت والخلط، بالإضافة إلى تحسين عملية التحقق البسيط من الدفع. راجع ملاحظات الإصدار الكامل والتنزيلات [هنا](https://github.com/decred/decred-binaries/releases/tag/v1.6.2)، ولا تنس [التحقق](https://docs.decred.org/advanced/verifying-binaries/) منها قبل التثبيت.
 
 ## التطوير
 
@@ -45,7 +45,7 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 
 تم الدمج في الإصدار الرئيسي ونسخة الإصدار 1.6.2:
 
-* إرسال الإعلانات [السريعة للكتل](https://github.com/decred/dcrd/pull/2606) فقط لأقران العقد الكاملة، مع عدم إرسالها للعملاء خفيفي الوزن الذين لا يمكنهم التعامل معها بشكل صحيح. يعمل هذا على تحسين استقرار اتصال التحقق من الدفع البسيط، ونتيجة لذلك، يجب أن تحتاج محافظ التحقق من الدفع البسيط إلى عدد أقل من عمليات الإصلاح.
+* إرسال الإعلانات [السريعة للكتل](https://github.com/decred/dcrd/pull/2606) فقط لأقران العقد الكاملة، مع عدم إرسالها للعملاء خفيفي الوزن الذين لا يمكنهم التعامل معها بشكل صحيح. يعمل هذا على تحسين استقرار اتصال التحقق البسيط من الدفع، ونتيجة لذلك، يجب أن تحتاج محافظ التحقق البسيط من الدفع إلى عدد أقل من عمليات الإصلاح.
 
 الإضافة الرئيسية للشهر هي الحزمة الجديدة للتعامل مع [العناوين القياسية](https://github.com/decred/dcrd/pull/2610) التي من الأسهل اتباعها واستخدامها من الكود الذي يحل محلها. كما أنها أكثر عمومية، مما يسمح بإضافة أنواع جديدة من العناوين في المستقبل. وإذا كنت قد تساءلت يوما عن كيفية ارتباط "البرامج النصية" و"العناوين"، أو كيف يختلف "المعيار" عن "الإجماع"، فتحقق من [الملف التمهيدي](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) الجديد للحزمة أو اتبع الأمثلة والاختبارات الشاملة لفهم كيفية عملها بشكل كامل. شكرا لجميع المراجعين و مرحبا بالقادمين الجدد — من الجيد دائما الحصول على زوج جديد من العيون!
 
@@ -86,7 +86,7 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 * زيادة تغطية اختبار واجهة المستخدم
 * ~ 11 إصلاحًا للأخطاء
 
-تم [دمج](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc) إجمالي 53 طلب سحب من 5 مساهمين، وتغيير 504 ملفًا، مع إضافة 14.5 ألف وحذف 14.7 ألف سطر من الكود. بدون الكثير من التغييرات الملموسة للمستخدم، تعني هذه الأعداد الكبيرة أساسًا الكثير من تحديثات البنية التحتية "التي تتم خلف الكواليس" لتسهيل التطوير المستقبلي.
+تم [دمج](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc) إجمالي 53 طلب سحب من 5 مساهمين، وتغيير 504 ملفًا، مع إضافة 14.5 ألف وحذف 14.7 ألف سطر من الكود. بدون الكثير من التغييرات الملموسة للمستخدم، تعني هذه الأعداد الكبيرة أسس كثيرة من تحديثات البنية التحتية "التي تتم خلف الكواليس" لتسهيل التطوير المستقبلي.
 
 قيد التنفيذ: إدماج [DCRDEX](https://github.com/decred/decrediton/pull/3356) وتحديثات التصميم.
 
@@ -94,7 +94,7 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 
 **[بوليتيا](https://github.com/decred/politeia)**
 
-تم [دمج](https://github.com/decred/politeia/pull/1180) الترحيل الملحمي إلى خلفية تخزين أكثر [مرونة](https://twitter.com/lukebp_/status/1376238020563767303) وقابلية للتطوير بعد ما يقرب من عام واحد من التطوير. وعلى مستوى عالٍ، يقدم لنا ما يلي:
+تم [دمج](https://github.com/decred/politeia/pull/1180) الترحيل الملحمي إلى خلفية تخزين أكثر [مرونة](https://twitter.com/lukebp_/status/1376238020563767303) وقابلية للتطوير بعد ما يقارب من عام من التطوير. وعلى مستوى عالٍ، يقدم لنا ما يلي:
 
 * قابلية التوسع - لم تعد مقيدة بنظام الملفات لمثيل واحد
 * يتم فصل الطوابع الزمنية والبيانات، مما يسمح بفرض رقابة حقيقية (وحذف) البيانات دون مفاضلات محرجة. ضع في اعتبارك أن الرقابة تزيل البيانات فقط ولكن ليس السجل الذي يثبت أن الخادم قد شاهدها، أي أن "مسار التدقيق" غير قابل للتغيير.
@@ -138,7 +138,7 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 
 تُعد PTLC (العقود المحددة المدة) تطورًا مثيرًا في الشبكة البرقية لقدرتها على معالجة [قيود](https://suredbits.com/payment-points-monotone-access-structures/) HTLCs (العقود المقفلة زمنياً) المستخدمة حاليًا، ولحالات الاستخدام الجديدة التي أصبحت ممكنة.
 
-والواقع أن الاختراق الذي تم تمكينه من العقود المحددة المدة كان بسيطاً _بالنسبة ل matheusd@_ إلى الحد الذي جعله قادراً أيضاً على تشفير بناء مثير للاهتمام يسمى شجرة الصفقات متعددة الاسترداد (MRTTREE) معه، ونموذج أولي للتبرع/الدفع عبر الشبكة البرقية على رأس ذلك. يتكون النظام من [dcrlnd](https://github.com/decred/dcrlnd/compare/v0.3.1...matheusd:ptlc-poc) المصححة، و[خادم](https://github.com/matheusd/mrttree) PoC لتنسيق شجرة معاملات متعددة الاسترداد، و [Decrediton](https://github.com/matheusd/decrediton/commits/mrttree_poc) مصححة. تم شرح الرياضيات في [رسالة بريد إلكتروني](https://lists.linuxfoundation.org/pipermail/lightning-dev/2021-March/002983.html) إلى القائمة البريدية لـ lightning-dev و[فيديو](https://www.youtube.com/watch?v=m1sQGHUKU7I) تقديمي (يبدأ العرض التوضيحي لمدفوعات الشبكة البرقية في وضع عدم الاتصال عند حوالي [الدقيقة 15](https://www.youtube.com/watch?v=m1sQGHUKU7I&t=915s)).
+والواقع أن الاختراق الذي تم تمكينه من العقود المحددة المدة كان بسيطاً _بالنسبة ل matheusd@_ إلى الحد الذي جعله قادراً أيضاً على بناء كود مثير للاهتمام يسمى شجرة الصفقات متعددة الاسترداد (MRTTREE) معه، ونموذج أولي للتبرع/الدفع عبر الشبكة البرقية على رأس ذلك. يتكون النظام من [dcrlnd](https://github.com/decred/dcrlnd/compare/v0.3.1...matheusd:ptlc-poc) المصححة، و[خادم](https://github.com/matheusd/mrttree) PoC لتنسيق شجرة معاملات متعددة الاسترداد، و [Decrediton](https://github.com/matheusd/decrediton/commits/mrttree_poc) مصححة. تم شرح الرياضيات في [رسالة بريد إلكتروني](https://lists.linuxfoundation.org/pipermail/lightning-dev/2021-March/002983.html) إلى القائمة البريدية لـ lightning-dev و[فيديو](https://www.youtube.com/watch?v=m1sQGHUKU7I) تقديمي (يبدأ العرض التوضيحي لمدفوعات الشبكة البرقية في وضع عدم الاتصال عند حوالي [الدقيقة 15](https://www.youtube.com/watch?v=m1sQGHUKU7I&t=915s)).
 
 الاختراق تجريبي ويحتاج إلى بعض التحقيقات الجادة في التشفير للتأكد من أنه آمن. ومع ذلك، فإن هذا العمل مثير للاهتمام في سياق [تذاكر](https://blog.decred.org/2019/11/11/LN-Multi-Owner-Tickets/) الشبكة البرقية متعددة المالكين (وهو شكل أفضل لتقسيم التذاكر)، بالإضافة إلى حالات الاستخدام الأخرى التي تم تمكينها بواسطة أشجار المعاملات متعددة الاسترداد مثل التبرعات خارج السلسلة والتمويل الجماعي. على عكس الإنشاءات المبنية على العقود المقفلة زمنياً لأشجار معاملات الاسترداد المتعددة المذكورة في [منشور](https://blog.decred.org/2019/11/11/LN-Multi-Owner-Tickets/) المدونة الأصلي، فإن العنصر المستند إلى العقود المحددة المدة لا يحتاج إلى كود تشغيل جديد: كود تشغيل Schnorr checkig الحالي (أو أي كود تشغيل جديد المضاف في النهاية) كاف لتمكينه.
 
@@ -160,9 +160,9 @@ _الصورة: التدرج الهيكلي بواسطة saender@_
 * السماح [بفرز](https://github.com/decred/dcrdex/pull/955) جدول الطلبات الخاص بك
 * الإشارة إلى الحالة [غير المتصلة](https://github.com/decred/dcrdex/pull/989)
 * دعم [التشفير](https://github.com/decred/dcrdex/pull/1023) والقفل المستند إلى الحساب لمحافظ DCR (سيتم استخدام هذا بواسطة Decrediton لقفل حساب التداول فقط وليس حساب الآخرين)
-* السماح [بجلسات](https://github.com/decred/dcrdex/pull/1012) متعددة مصادق عليها (لتسجيل الدخول في متصفحات مختلفة في نفس الوقت)
+* السماح [بجلسات](https://github.com/decred/dcrdex/pull/1012) متعددة المصادق عليها (لتسجيل الدخول في متصفحات مختلفة في نفس الوقت)
 * إرسال أحدث تقدير [لمعدل الرسوم](https://github.com/decred/dcrdex/pull/1000) إلى العميل لدعم عملاء التحقق من الدفع البسيط، وتحسين تقديرات الطلبات وتشديد الأمن
-* إرسال بيانات [المعاملات](https://github.com/decred/dcrdex/pull/804) الخام لاستيعاب عملاء التحقق من الدفع البسيط الذين ليس لديهم مجمع ذاكرة وهم في الظلام حتى يتم استخراج معاملة العقد (وهذا أيضا يجعل العملية أكثر قوة ضد الانتشار الضعيف للمعاملة على الشبكة)
+* إرسال بيانات [المعاملات](https://github.com/decred/dcrdex/pull/804) الخام لاستيعاب عملاء التحقق البسيط من الدفع الذين ليس لديهم مجمع ذاكرة وهم في الظلام حتى يتم استخراج معاملة العقد (وهذا أيضا يجعل العملية أكثر قوة ضد الانتشار الضعيف للمعاملة على الشبكة)
 * [إطار آلي](https://github.com/decred/dcrdex/pull/956) لإختبار شبكة محاكاة الإيثيريوم أثناء التطوير
 * وضع الأسس لدعم [البتكوين كاش](https://github.com/decred/dcrdex/pull/944)
 * إضافة [إصدار](https://github.com/decred/dcrdex/pull/959) قاعدة البيانات وإنشاء بيانات التداول التاريخية (وحدات التخزين والارتفاعات والانخفاضات، إلخ)
@@ -274,7 +274,7 @@ _الصورة: تصميم مخطط ديكريد المستقبلي_
 تم اكتشاف نشاط ملحوظ عبر حوالي 90 حسابًا [متتبعًا](https://github.com/decredcommunity/social-media-stats):
 
 * شهد كل من التويتر و الريديت و التيليجرام شهرًا آخر من النمو الجيد
-* حصل [CoinGecko](https://www.coingecko.com/en/coins/decred)  على أزيد من 409 إعجاب (ليصل إلى 9,516) منذ منتصف مارس عندما بدأنا في تتبعه
+* حصل [CoinGecko](https://www.coingecko.com/en/coins/decred)  على أكثر من 409 إعجاب (ليصل إلى 9,516) منذ منتصف مارس عندما بدأنا في تتبعه
 * حساب مشروع ديكريد على Gap عمره 11 شهرًا ولكنه لا يضم سوى 7 متابعين. نرحب بأي تواصل لمساعدته على النمو.
 * اكتسب [Checkmate@](https://twitter.com/_Checkmatey_) الملقب بـ "الآلة" أزيد من 1,816 متابعًا (+35٪، ليصل إلى 7,042)، وينشر ألف تغريدة أخرى من خلال 34 تغريدة يوميًا تقريبًا
 * اكتسب [PermabullNino@](https://twitter.com/PermabullNino) أزيد من 398 متابعًا (+ 13٪، ليصل إلى 3,391)
@@ -331,7 +331,7 @@ _الصورة: تصميم مخطط ديكريد المستقبلي_
 
 ## الإنضمام
 
-أعلن مقدم خدمة التصويت [decred.raqamiya.net](https://decred.raqamiya.net/) أنه سيتم إغلاقه. وحتىن 5 أبريل، كان [يتوفر](https://decred.raqamiya.net/stats) على 128 مستخدمًا نشطًا و 284 مستخدمًا في الإجمال، و 52 تذكرة حية، وأكثر من 20 ألف تذكرة تم التصويت عليها منذ عام 2017. أظهر مزود خدمة التصويت واجهة مستخدم مخصصة، وإشعارات عبر البريد الإلكتروني على التذاكر التي تم التصويت عليها، و 4 خوادم تصويت في 3 قارات. تطلب [الصفحة الرئيسية](https://decred.raqamiya.net/) عدم شراء أي تذاكر جديدة، ولكن سيتم دعم التذاكر الحية حتى يتم الاتصال بها جميعًا. شكرا على خدمتكم!
+أعلن مقدم خدمة التصويت [decred.raqamiya.net](https://decred.raqamiya.net/) أنه سيتم إغلاقه. وحتى 5 أبريل، كان [يتوفر](https://decred.raqamiya.net/stats) على 128 مستخدمًا نشطًا و 284 مستخدمًا في الإجمال، و 52 تذكرة حية، وأكثر من 20 ألف تذكرة تم التصويت عليها منذ عام 2017. أظهر مزود خدمة التصويت واجهة مستخدم مخصصة، وإشعارات عبر البريد الإلكتروني على التذاكر التي تم التصويت عليها، و 4 خوادم تصويت في 3 قارات. تطلب [الصفحة الرئيسية](https://decred.raqamiya.net/) عدم شراء أي تذاكر جديدة، ولكن سيتم دعم التذاكر الحية حتى يتم استدعائها جميعًا. شكرا على خدمتكم!
 
 [أعلنت](https://twitter.com/_cexz_/status/1366501324536299523) منصة مُبادلات [CexZ](https://www.cexz.ca/) عن قائمة إدراج DCR/BTC وجاءت [لزيارة](https://www.reddit.com/r/decred/comments/lvl8i0/decred_dcr_added_to_the_btc_market/) r/decred.
 
