--- a/journal/202104.md
+++ b/journal/202104.md
@@ -8,10 +8,10 @@ _الصورة: نقطة تكاملية بواسطة saender@_
 
 أبرز أحداث شهر أبريل:
 
-* مر التصويت الإجماعي السادس لديكرد بموافقة بالإجماع وإقبال كبير من الناخبين.
+* انتهاء التصويت الإجماعي السادس لديكريد بموافقة بالإجماع وإقبال كبير من الناخبين.
 * يتوفر الآن الإصدار 1.0 لبوليتيا مع بنية تحتية أكثر قابلية للتوسع وأكثر قابلية للتطبيق في المستقبل.
 * يتم التصويت على اقتراح بوليتيا الأول لإضفاء الطابع الرسمي على خارطة طريق التطوير والميزانية.
-* سيتم تحديث منصة المُبادلات اللامركزية لديكريد DCRDEX نحو الإصدار 0.2 مع العديد من تحسينات الواجهة الخلفية وتجربة المستخدم، بالإضافة إلى أسس الميزات المثيرة المستقبلية.
+* سيتم تحديث منصة المُبادلات اللامركزية لديكريد DCRDEX نحو الإصدار 0.2 مع العديد من تحسينات الواجهة الخلفية وتجربة المستخدم، بالإضافة إلى أسس الميزات المستقبليةالمثيرة المستقبلية.
 * تم الدمج الأولي لمنصة المُبادلات اللامركزية لديكريد DCRDEX في ديكريديتون.
 
 المحتويات:
@@ -37,7 +37,7 @@ _الصورة: نقطة تكاملية بواسطة saender@_
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-* تم [تحويل](https://github.com/decred/dcrd/pull/2625) قاعدة الكود لاستخدام حزمة `stdaddr` الجديدة. الكود الذي يتعامل مع العناوين يدعم الآن إصدارات البرامج النصية المختلفة وهو بعد خطوة من إمكانية تقديم إصدارات لغة برمجة جديدة. وكما هو شائع مع التغييرات الكبيرة، لجعل المراجعة أسهل تم تقسيمه إلى سلسلة من الإيداعات الفردية بحيث يتم بناء كل شيء و تمر بجميع الإختبارات في كل خطوة على الطريق.
+* تم [تحويل](https://github.com/decred/dcrd/pull/2625) قاعدة الكود لاستخدام حزمة `stdaddr` الجديدة. الكود الذي يتعامل مع العناوين يدعم الآن إصدارات البرامج النصية المختلفة وهذه خطوة افبل لإمكانية تقديم إصدارات لغة برمجة جديدة. وكما هو شائع مع التغييرات الكبيرة، لجعل المراجعة أسهل تم تقسيمه إلى سلسلة من الإيداعات الفردية بحيث يتم بناء كل شيء و تمر بجميع الإختبارات في كل خطوة على الطريق.
 * إدخال [قاعدة بيانات لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2632). فهي تمهد الطريق لتنفيذ قاعدة بيانات خاصة لمخرجات المعاملات غير المنفقة والتي يمكن جعلها أكثر كفاءة من حيث وقت المعالجة واستخدام الذاكرة.
 * تمت إضافة [متوسط ​​الوقت](https://github.com/decred/dcrd/pull/2638) خلال آخر 11 كتلة لإطالة نتائج `getblock` و `getblockheader` (المستخدمة بواسطة منصة المُبادلات اللامركزية لديكريد DCRDEX)
 * السماح بتحديد واجهات الشبكة للاستماع حسب الإسم بالإضافة إلى عناوين IP المضبوطة
@@ -217,7 +217,7 @@ _الصورة: نقطة تكاملية بواسطة saender@_
 
 إصدارات العقد اعتبارًا من [لقطة](https://nodes.jholdstock.uk/user_agents) 1 مايو (إجمالي 257، dcrd فقط): النسخة 1.6.0 - 26٪، النسخة 1.6.2 - ٪24، النسخة 1.6.1 - 22٪، النسخة 1.5.2 - 7٪، النسخة 1.5.1 - 7٪، النسخة 1.7 لبناءَات التطوير- 7٪، نسخة التطوير 1.6 - 4٪، النسخة 1.5.0 - 2٪.
 
-انخفضت حصة [العملات المختلطة](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=kmvlwq6x-ko7rp8zy&bin=day&axis=time&visibility=true-true-true) بشكل طفيف من 44٪ إلى 42٪. تفاوتت [الكمية المختلطة](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=kguk0rxu-koc4hs00&bin=day&axis=time) اليومية بين 150 و 300 ألف وحدة ديكريد.
+انخفضت حصة [العملات المخلوطة](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=kmvlwq6x-ko7rp8zy&bin=day&axis=time&visibility=true-true-true) بشكل طفيف من 44٪ إلى 42٪. تفاوتت [الكمية المخلوطة](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=kguk0rxu-koc4hs00&bin=day&axis=time) اليومية بين 150 و 300 ألف وحدة ديكريد.
 
 تم رصد وجود بيسون على [الشبكة البرقية](https://ln-map.jholdstock.uk/) كعقدة تسمى "El Gran Bisonte ⚡🐂⚡".
 
@@ -261,7 +261,9 @@ _الصورة: نقطة تكاملية بواسطة saender@_
 مقالات مختارة:
 
 * تقوم ديكريد بتغيير الإجماع لزيادة اللامركزية في الخزينة البالغة قيمتها 128 مليون دولار ([banklesstimes.com](https://www.banklesstimes.com/2021/04/12/decred-makes-consensus-change-to-further-decentralize-128m-treasury/))
+  
 *ما هي ديكريد ووحدتها DCR؟ بواسطة Ivan on Tech على ([ivanontech.com](https://academy.ivanontech.com/blog/what-is-decred-and-dcr))
+  
 * مراجعة قطاع العملات الرقمية في الربع الأول من عام 2021 بواسطة ميرا كريستانتو ([messari.io](https://messari.io/article/q1-21-currency-sector-review)) - [غرد](https://twitter.com/MessariCrypto/status/1381654632515174402) Messari أن ديكريد هي ثاني أكبر محرك بعد ضOGى في الربع الأول من عام 2021
 
 أشرطة الفيديو:
