--- a/journal/202104.md
+++ b/journal/202104.md
@@ -37,7 +37,7 @@ _الصورة: نقطة تكاملية بواسطة saender@_
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-* تم [تحويل](https://github.com/decred/dcrd/pull/2625) قاعدة الكود لاستخدام حزمة `stdaddr` الجديدة. الكود الذي يتعامل مع العناوين يدعم الآن إصدارات البرامج النصية المختلفة وهذه خطوة افبل لإمكانية تقديم إصدارات لغة برمجة جديدة. وكما هو شائع مع التغييرات الكبيرة، لجعل المراجعة أسهل تم تقسيمه إلى سلسلة من الإيداعات الفردية بحيث يتم بناء كل شيء و تمر بجميع الإختبارات في كل خطوة على الطريق.
+* تم [تحويل](https://github.com/decred/dcrd/pull/2625) قاعدة الكود لاستخدام حزمة `stdaddr` الجديدة. الكود الذي يتعامل مع العناوين يدعم الآن إصدارات البرامج النصية المختلفة وهذه خطوة اقرب لإمكانية تقديم إصدارات لغة برمجة جديدة. وكما هو شائع مع التغييرات الكبيرة، لجعل المراجعة أسهل تم تقسيمه إلى سلسلة من الإيداعات الفردية بحيث يتم بناء كل شيء و تمر بجميع الإختبارات في كل خطوة على الطريق.
 * إدخال [قاعدة بيانات لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2632). فهي تمهد الطريق لتنفيذ قاعدة بيانات خاصة لمخرجات المعاملات غير المنفقة والتي يمكن جعلها أكثر كفاءة من حيث وقت المعالجة واستخدام الذاكرة.
 * تمت إضافة [متوسط ​​الوقت](https://github.com/decred/dcrd/pull/2638) خلال آخر 11 كتلة لإطالة نتائج `getblock` و `getblockheader` (المستخدمة بواسطة منصة المُبادلات اللامركزية لديكريد DCRDEX)
 * السماح بتحديد واجهات الشبكة للاستماع حسب الإسم بالإضافة إلى عناوين IP المضبوطة
